remove same classes

--- a/card.html
+++ b/card.html
@@ -12,7 +12,7 @@
 		<!-- your favorite animal's name goes here -->
 		<h3>My Cat </h3>
 		<!-- your favorite animal's image goes here -->
-		<img class="centerImg" src="cat.png" alt="cat">
+		<img  src="cat.png" alt="cat">
 		<div class="container">
 			<!-- your favorite animal's interesting fact goes here -->
 			<p class="interestingFact">Cats love to be pet, held, and cuddled. Plus, they are extremely loyal. Give them a bit of attention, and you'll get a lot of love in return.</p>
