--- a/card.html
+++ b/card.html
@@ -6,11 +6,13 @@
 	<link rel="stylesheet" href="styles.css"/>
 	<!-- Google fonts . -->
 	<link href="https://fonts.googleapis.com/css?family=Comfortaa|EB+Garamond" rel="stylesheet">
+	<!-- some Emojis  -->
+	<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 </head>
 <body>
 	<div class="main">
 		<!-- your favorite animal's name goes here -->
-		<h3>My Cat </h3>
+		<h3 >My Cat <i class="em em-cat"></i></h3>
 		<!-- your favorite animal's image goes here -->
 		<img  src="cat.png" alt="cat">
 		<div class="container">
