--- a/card.html
+++ b/card.html
@@ -15,7 +15,7 @@
 		<h3 >My Cat <i class="em em-cat"></i></h3>
 		<!-- your favorite animal's image goes here -->
 		<img  src="cat.png" alt="cat">
-		<div class="container">
+		<div class="inner-container">
 			<!-- your favorite animal's interesting fact goes here -->
 			<p class="interestingFact">Cats love to be pet, held, and cuddled. Plus, they are extremely loyal. Give them a bit of attention, and you'll get a lot of love in return.</p>
 			<ul>
